add background soundtrack and image controls

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			</svg>
 
 			<audio id="background-music" paused loop>
-				<source src="./assets/audios/audio-better-off-alone.webm" type="audio/mpeg" />
+				<source src="./assets/audios/background-music.webm" type="audio/mpeg" />
 			</audio>
 		</button>
 
@@ -88,9 +88,9 @@
 
 			<div id="controls-overlay" class="dialog-overlay -hidden">
 				<div class="dialog-box">
-					<img src="./assets/sprites/arrows.png" alt="arrows or wasd" />
+					<img src="./assets/img/arrows.png" alt="arrows or wasd" />
 					<p class="dialog-text">Move</p>
-					<img src="./assets/sprites/space.png" alt="space or enter" />
+					<img src="./assets/img/space.png" alt="space or enter" />
 					<p class="dialog-text">Fireball</p>
 					<div class="dialog-buttons">
 						<button onclick="closeDialog(this)">Close</button>
