--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 			<div id="instructions-overlay" class="dialog-overlay -hidden">
 				<div class="dialog-box">
 					<p class="dialog-text">
-						Reuna todas as áreas da empresa para derrotar o temido Churn.
+						Reuna todas as áreas da empresa para derrotar o temido CHURN.
 					</p>
 					<div class="dialog-buttons">
 						<button onclick="closeDialog(this)">Close</button>
