add restart button

--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
 		<section id="game-win" class="game-win -hidden">
 			<img src="./assets/img/fabio3.webp" alt="">
 			<span>You Win</span>
+			<button class="restart-button" onclick="startGame()">Restart game</button>
 		</section>
 
 		<div id="game-container" class="-hidden"></div>
