change game name

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Super Fábio</title>
+		<title>Super Show</title>
 
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -111,7 +111,7 @@
 		</main>
 
 		<footer class="footer">
-			<p><b>© 2025 Super Fábio</b>.</p>
+			<p><b>© 2025 Super Show</b>.</p>
 			<p>
 				Todos os direitos alguma coisa blá blá. Desenvolvido por <b>sei lá</b>. Imagens e
 				marcas registradas são propriedade de seus respectivos donos (uhum, sei).
